- Code tuning after FindBugs revision. - Dates.toString() methods uses the current locale from Locales.getCurrent. - Unused classes ChangeLenguageAction and GoFirstAction removed.